# jpos-weather

./: Cargo.toml  README.md  build.rs  cspell.json
.github/workflows/: ci.yaml
.reuse/: dep5
src/: daytime.rs  geoip.rs  main.rs  smhi.rs
ui/: components.slint  globals.slint  icons.slint  main.slint  symbols.slint
