[package]
name = "jpos-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
slint = { git = "https://github.com/slint-ui/slint.git", rev = "ef39adce30d33b86634e5359db03a18d521a9bc8" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "ef39adce30d33b86634e5359db03a18d521a9bc8" }
