[package]
name = "jpos-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.13"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
slint = "1.6.0"

[build-dependencies]
slint-build = "1.6.0"
